--- a/Week_1_HTML_CSS/Day_02/Exercises/xp-shop-ws.css
+++ b/Week_1_HTML_CSS/Day_02/Exercises/xp-shop-ws.css
@@ -97,12 +97,13 @@ body {
     display: flex;
     justify-content: space-around;
     margin-top: 100px;
+    margin-bottom: 30px;
     }
 
 .prod-group-card {
     text-align: center;
     width: 500px;
-    background-color: white;
+    background-color:white;
     border-radius: 6px;
 }
 
@@ -113,11 +114,11 @@ body {
 }
 
 .card-img {
-    margin-top: 30px;
     margin-bottom: 20px;
-    height: 200px;
+    width: 100%;
     border-radius: 6px;
-    border: solid 2px brown;
+    border: solid 4px burlywood;
+    padding: 4px;
 }
 
 .card-text {
