--- a/Week_1_HTML_CSS/Day_02/Exercises/xp-shop-ws.css
+++ b/Week_1_HTML_CSS/Day_02/Exercises/xp-shop-ws.css
@@ -16,15 +16,16 @@ body {
 .header {
     display: flex;
     justify-content: space-between;
-    background-color: black; 
+    background-color: rgb(22, 1, 1); 
     width: 100%;
+    border-bottom: solid 2px rgb(218, 165, 32, 0.5);
 
 }
 
 .logo{
     margin-left: auto;
     margin-right: auto;
-    margin-top: 100px;
+    margin-top: 60px;
     margin-bottom: 20px;
 }
 
@@ -36,7 +37,7 @@ body {
 }
 
 .prod-link-text {
-    color: white;
+    color: wheat;
     text-decoration: none;
     font-weight: 700;
     font-size: 20px;
@@ -44,7 +45,7 @@ body {
 }
 
 .login-link-text {
-    color: white;
+    color: wheat;
     text-decoration: none;
     font-weight: 700;
     font-size: 20px;
@@ -83,7 +84,7 @@ body {
 }
 
 .small-text {
-    color: #5AD156;
+    color: rgb(90, 209, 86);
     font-family: 'Roboto Condensed', sans-serif;
     font-weight: 600;
     font-size: 16px;
@@ -96,14 +97,14 @@ body {
 .prod-cards {
     display: flex;
     justify-content: space-around;
-    margin-top: 100px;
-    margin-bottom: 30px;
+    margin-top: 55px;
+    margin-bottom: 65px;
     }
 
 .prod-group-card {
     text-align: center;
     width: 500px;
-    background-color:white;
+    background-color:rgb(22, 1, 1);
     border-radius: 6px;
 }
 
@@ -111,17 +112,46 @@ body {
     font-weight: 700;
     font-size: 20px;
     margin-bottom: 10px;
+    letter-spacing: 1px;
+
+    color: rgb(90, 209, 86);
 }
 
 .card-img {
     margin-bottom: 20px;
     width: 100%;
     border-radius: 6px;
-    border: solid 4px burlywood;
     padding: 4px;
 }
 
 .card-text {
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 30px;
+    margin-top: 15px;
+
+    color: white;
+    font-size: 20px;
+}
+
+/*FOOTER*/
+
+.footer {
+    position: fixed;
+    bottom: 0px;
+    
+    background-color: rgb(22, 1, 1); 
+    width: 100%;
+    border-top: solid 2px rgb(218, 165, 32, 0.5);
+
+    color: wheat;
+    text-align: right;
+    font-size: 20px;
+
+}
+
+.footer-text {
+    margin-right: 30px;
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
