--- a/Week_7_JS/Day_05/xp_exercises/main.css
+++ b/Week_7_JS/Day_05/xp_exercises/main.css
@@ -1,37 +1,55 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Roboto, sans-serif;
     display: flex;
-    justify-content: center;
     align-items: center;
     height: 100vh;
     margin: 0;
+    background-image: url("/Week_7_JS/Day_05/xp_exercises/images/4aa99b6ad2d2cbc7cb04a41571885a8f.jpg");
+    background-color: rgb(0, 0, 0, 0.3);
+    background-blend-mode: darken;
   }
   
-  .container {
-    display: flex;
-    gap: 20px;
+  #img {
+    position: absolute;
+    top: 20px;
+    margin-left: 38%;
   }
-  
-  .card {
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    padding: 20px;
+
+  #logo {
+    border-radius: 20px;
+    border: solid 1px rgb(0, 0, 0);
+    height: 250px;
+
+  }
+
+  #main {
+    margin-left: 38%;
+    width: 436px;
+  }
+
+  #yellow-frame {
+    border: solid 2px gold;
+    border-radius: 20px;
+    background-color: black;
+    position: relative;
+    margin-top: 80px;
+    padding-top: 20px;
+    height: 350px;
+    color: white;
+    text-align: center;        
+  }
+
+  #btn {    
+    margin-top: 20px;
+    margin-left: 20%;
+  }
+
+  #find {
+    border: solid 2px gold;
+    border-radius: 10px;
+    height: 40px;
     width: 250px;
-    text-align: center;
-  }
-  
-  .card img {
-    width: 100%;
-    border-radius: 5px;
-    margin-bottom: 10px;
-  }
-  
-  .card h3 {
-    margin: 0;
+    font-weight: 700;
     font-size: 20px;
-    color: #333;
-  }
-  
-  .card p {
-    color: #666;
+    
   }
